--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  margin: center;
+  margin: auto;
+  padding: 50px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -49,4 +50,12 @@ code {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* ----------------------My css------------------------- */
+.colorBlue {
+  color: blue;
+}
+.colorRed {
+  Color: red;
 }
