--- a/src/App.scss
+++ b/src/App.scss
@@ -74,21 +74,12 @@ body {
           padding      : 10px 30px;
           color        : white;
           background   : #262627;
+          border       : none;
 
           &:hover {
             background: #504F50;
           }
         }
-      }
-    }
-  }
-
-  .admin-container {
-    display: flex;
-
-    .admin-sidebar {
-      .pro-sidebar {
-        height: 100vh !important;
       }
     }
   }
