--- a/src/components/Admin/Content/ManageUser.scss
+++ b/src/components/Admin/Content/ManageUser.scss
@@ -1,3 +1,28 @@
+.manage-user-container {
+    padding: 10px;
+
+    .user-content {
+        .btn-add-new {
+            margin: 15px 0;
+
+            button {
+                display    : flex;
+                align-items: center;
+                gap        : 5px;
+            }
+
+        }
+    }
+
+    .title {
+        font-weight: 600;
+        font-size  : 20px;
+    }
+}
+
+
+
+
 .modal-add-user {
     .img-preview {
         height         : 150px;
