--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -15,8 +15,6 @@
             border: 1px solid #1E1F35;
         }
 
-        .admin-main {
-            border: 1px solid rgb(216, 107, 214);
-        }
+        .admin-main {}
     }
 }
