--- a/src/components/Auth/Login.scss
+++ b/src/components/Auth/Login.scss
@@ -1,9 +1,25 @@
 .login-container {
+    .loader-icon {
+        font-size   : 20px;
+        margin-right: 10px;
+        animation   : spin 1s infinite linear;
+    }
+
+    @keyframes spin {
+        from {
+            transform: scale(1) rotate(0deg);
+        }
+
+        to {
+            transform: scale(1) rotate(360deg);
+        }
+    }
+
     .header {
         height    : 45px;
         text-align: right;
-        border    : 1px solid red;
-        padding   : 5px 100px 0 100px;
+
+        padding: 5px 100px 0 100px;
 
         button {
             padding      : 3px 15px;
@@ -45,6 +61,12 @@
             margin       : 20px 0;
             color        : white;
             background   : black;
+
+            &:disabled {
+                background: #dddddd;
+                color     : #afafaf;
+                cursor    : no-drop;
+            }
         }
 
         .back {
